# opengeopp

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
doc/: Makefile.am
doc/local/: index.doc.in  sources.mk
info/: Makefile.am  version-ref.texi
man/: Makefile.am
opengeopp/: OPENGEOPP_Service.hpp  OPENGEOPP_Types.hpp  sources.mk
opengeopp/basic/: BasChronometer.cpp  BasChronometer.hpp  BasConst.cpp  BasConst_General.hpp  BasConst_OPENGEOPP_Service.hpp  sources.mk
opengeopp/batches/: Makefile.am  opengeopp.cpp  sources.mk
opengeopp/bom/: BomAbstract.cpp  BomAbstract.hpp  sources.mk
opengeopp/command/: sources.mk
opengeopp/core/: sources.mk
opengeopp/dbadaptor/: DbaAbstract.cpp  DbaAbstract.hpp  DbaPlace.cpp  DbaPlace.hpp
opengeopp/factory/: FacBomAbstract.cpp  FacBomAbstract.hpp  FacOpenGeoppServiceContext.cpp  FacOpenGeoppServiceContext.hpp  FacServiceAbstract.cpp  FacServiceAbstract.hpp  FacSupervisor.cpp  FacSupervisor.hpp  sources.mk
opengeopp/service/: Logger.cpp  Logger.hpp  OPENGEOPP_Service.cpp  OPENGEOPP_ServiceContext.cpp  OPENGEOPP_ServiceContext.hpp  ServiceAbstract.cpp  ServiceAbstract.hpp  sources.mk
po/: POTFILES.in  fr.po  opengeopp.pot
refdata/: README
test/: Makefile.am  OpenGeoTestSuite.cpp  OpenGeoTestSuite.hpp  testLib.sh
test/com/: CppUnitCore.cpp  CppUnitCore.hpp  XmlOutputterHookForCC.cpp  XmlOutputterHookForCC.hpp  sources.mk
tools/page_rank/: page_rank.py
win32/: Makefile.am
